--- a/src/assets/scss/customizer/controls/_sortable-accordion.scss
+++ b/src/assets/scss/customizer/controls/_sortable-accordion.scss
@@ -170,8 +170,10 @@
 			padding-top: .75em;
 
 			.repeater-control-title {
+				width: 100%;
 				padding-top: .25em;
 				padding-bottom: .25em;
+				text-align: center;
 			}
 
 			.align-wrapper {
